[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/presets/game/guns/saw_gun/saw_gun.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.02595, 12.6651 )

[node name="saw_gun" type="Node2D"]
script = ExtResource( 1 )

[node name="skin" type="Sprite" parent="."]
position = Vector2( 11.5823, 0.463294 )
scale = Vector2( 0.638054, 0.39193 )
texture = ExtResource( 2 )

[node name="damage_area" type="Area2D" parent="."]
position = Vector2( 25.5523, 0.757204 )
collision_layer = 4
collision_mask = 2

[node name="collision" type="CollisionShape2D" parent="damage_area"]
shape = SubResource( 1 )
disabled = true

[node name="delay_timer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="atack_period_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="atack_period_timer" to="." method="_on_atack_period_timer_timeout"]
